# midi_note_recorder

./: Cargo.toml  joy_world_1  test  vivaldi0  vivaldi1  vivaldi2  world3
examples/: fundsp_playback_demo.rs  fundsp_recording_demo.rs  print_midi.rs
src/: lib.rs
