[package]
name = "midi_note_recorder"
version = "0.1.4"
edition = "2021"

[dependencies]
midi-msg = "0.7.1"
crossbeam-queue = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1" 
anyhow = "1"

[dev-dependencies]
midi_fundsp = "0.5.3"
crossbeam-utils = "0.8"
read_input = "0.8"
midir = "0.10"
